# HesaiLidar_General_SDK

./: CMakeLists.txt
src/: pandarGeneral_sdk.cc  tcp_command_client.c
src/PandarGeneralRaw/: CMakeLists.txt
src/PandarGeneralRaw/include/: log.h
src/PandarGeneralRaw/include/pandarGeneral/: point_types.h
src/PandarGeneralRaw/src/: pandarGeneral.cc  pandarGeneral_internal.cc
